...
                        <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Gallery" id="acW-dT-cKf"/>
                    <connections>
                        <outlet property="memeCollectionView" destination="xrK-TW-3WY" id="GON-E9-WnP"/>
...
                                <rect key="frame" x="0.0" y="510" width="375" height="44"/>
                                <items>
                                    <barButtonItem title="Delete" id="jpi-U1-FI3">
                                        <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
...
                                        <color key="backgroundColor" white="0.82499999999999996" alpha="1" colorSpace="calibratedWhite"/>
                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="chooseCategory"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6sJ-BB-pgo">
                                        <rect key="frame" x="345" y="93" width="22" height="22"/>
                                        <accessibility key="accessibilityConfiguration" identifier="addCategoryButton"/>
                                        <connections>
                                            <segue destination="RPo-xb-6Dr" kind="presentation" identifier="AddCategorySegue" id="J3F-Xc-gE3"/>
...
                                        <rect key="frame" x="8" y="54" width="359" height="30"/>
                                        <color key="backgroundColor" white="0.82499999999999996" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="buttomTextField"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <rect key="frame" x="8" y="16" width="359" height="30"/>
                                        <color key="backgroundColor" white="0.82499999999999996" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="topTextField"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="0.0" y="574" width="375" height="44"/>
                                <items>
                                    <barButtonItem title="Clear" id="Txe-jt-hou">
                                        <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
...
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="f56-o1-qLG"/>
                                    <barButtonItem title="Save" id="6x2-vD-jDV">
                                        <connections>
                                            <action selector="saveMeme:" destination="8rJ-Kc-sve" id="xcI-EK-Hh5"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="390.5"/>
                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="addImage"/>
                                    </imageView>
                                </subviews>
...
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Create" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="bottomTextField" destination="uon-hb-4pm" id="jSA-OJ-F2V"/>
...
                                <rect key="frame" x="0.0" y="20" width="375" height="244"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What's MemeCreator?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Md-xd-Sp4">
                                        <rect key="frame" x="8" y="8" width="367" height="32"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
...
                                <rect key="frame" x="0.0" y="264" width="375" height="244"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How to use?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RrU-64-RFZ">
                                        <rect key="frame" x="8" y="8" width="367" height="32"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
...
                        <viewLayoutGuide key="safeArea" id="dWf-a8-Kq7"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="About" id="qKs-Sw-S6D"/>
                    <connections>
                        <outlet property="textViewBottom" destination="UyV-s3-ABx" id="A3C-QW-81h"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="p3d-qM-tFh"/>
                    <navigationItem key="navigationItem" title="Meme Categories" id="s7U-Ox-OmV">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="fAJ-ix-TVG">
                            <connections>
...
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6au-Za-8k0">
                                                    <rect key="frame" x="116" y="6" width="249" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="categoryTextField" label="categoryTextField"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
...
