...
        return { (action) in
            self.performSegue(withIdentifier: "MemeBackgroundPickerSegue", sender: self)
        }
    }
    
    @objc func imageTapped(tapGestureRecognizer: UITapGestureRecognizer){
        let alertController = UIAlertController(title: "Image Source", message: "Pick Image Source", preferredStyle: .actionSheet)
        let checkSourceType = { (sourceType: UIImagePickerControllerSourceType, buttonText: String) -> Void in
            if UIImagePickerController.isSourceTypeAvailable(sourceType) {
                alertController.addAction(UIAlertAction(title: buttonText, style: .default, handler: self.imagePickerControllerSourceTypeActionHandler(for: sourceType)))
            }
        }
        
        checkSourceType(.photoLibrary, "Photo Library")
        
        // action for choosing the background
        alertController.addAction(UIAlertAction(title: "Choose from list", style: .default, handler: self.presentMemeBackgroundPicker(for: .camera)))
        
        
        if !alertController.actions.isEmpty {
            alertController.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
            
            present(alertController, animated: true, completion: nil)
...
