...
		if selectedCategory != nil {
			navigationItem.title = "Edit Category"
			navigationItem.leftBarButtonItem = nil
			navigationItem.rightBarButtonItem = nil
		}
		else {
			navigationItem.title = "Add Category"
			navigationItem.leftBarButtonItem = UIBarButtonItem(barButtonSystemItem: .cancel, target: self, action: #selector(CategoryDetailViewController.cancel(_:)))
			navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .save, target: self, action: #selector(CategoryDetailViewController.save(_:)))
		}

		nameTextField.text = name
	}
...
